...
                            showContentView = true
                            isLoggedIn = true
                        }
                    }
                
                } label: {
                    Text("Sign In")
                        .foregroundColor(.white)
                        .frame(maxWidth: .infinity)
                        .padding()
                }
                .background(Color.gray)
                .padding(30)
...
