...
            ScrollView(.vertical, showsIndicators: false) {
                VStack(alignment: .leading, spacing: 20) {
                    Divider()
                    sideMenuButtons(title: "Profile", image: "person.fill", content: ProfileView(viewModel: viewModel))
                    if viewModel.currentUser.costCenter == "Admin" {
                        Divider()
                        sideMenuButtons(title: "New Employee", image: "logo.playstation", content: UserInfoView().onAppear{ showMenu = false})
                        Divider()
                        sideMenuButtons(title: "New Shift", image: "loupe", content: NewShiftView().onAppear{ showMenu = false})
                        Divider()
                        sideMenuButtons(title: "New Announcement", image: "calendar", content: NewAnnouncementView(viewModel: viewModel).onAppear{ showMenu = false})
                    }
                    Divider()
...
