...
                    Text("Announcements")
                        .fontWeight(.bold)
                        .font(.title)
                    
                        .padding()
                    VStack {
                        List(annoucemntViewModel.announcements) { annoucemnt in
                            // I can do a pull to refresh
                            AnnouncementsRowView(announment: annoucemnt)
                                .listRowBackground(Color.blue.opacity(0.3))
                            
                        }
                        .listStyle(.plain)
...
